--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-hire {
+        @apply mx-3 bg-green-500 text-green-200 px-5 py-1 cursor-pointer
+        hover:bg-green-400 rounded-full hover:text-green-100
+    }
+    .nav-link {
+        @apply text-gray-300 hover:text-gray-500 lg:mx-5 md:mx-2 sm:mx-1
+        
+    }
+    .btn-rounded {
+        @apply rounded-full py-2 px-5 uppercase text-sm
+        focus:outline-none focus:ring-offset-2
+    }
+}
