updated stakeholder btn style

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1120,6 +1120,10 @@ th {
   width: 13rem;
 }
 
+.w-3 {
+  width: 0.75rem;
+}
+
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -1617,6 +1621,10 @@ th {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .space-y-reverse > :not([hidden]) ~ :not([hidden]) {
@@ -2262,6 +2270,16 @@ th {
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .pt-3 {
